# Langchain1.0-Langgraph1.0-Learning

./: .gitignore  README.md  main.py  pyproject.toml
phase1_fundamentals/01_hello_langchain/: main.ipynb
phase1_fundamentals/02_prompt_templates/: main2.ipynb
phase1_fundamentals/03_messages/: main3.ipynb
phase1_fundamentals/04_custom_tools/: main4.ipynb
phase1_fundamentals/05_simple_agent/: main5.ipynb
phase1_fundamentals/06_agent_loop/: main6.ipynb
phase2_practical/07_memory_basics/: main7.ipynb
phase2_practical/08_context_management/: main8.ipynb
phase2_practical/09_checkpointing/: main9.ipynb
phase2_practical/10_middleware_basics/: main.py  main10.ipynb
phase2_practical/11_structured_output/: main11.ipynb
phase2_practical/12_validation_retry/: main12.ipynb
phase2_practical/13_rag_basics/: main13.ipynb
phase2_practical/14_rag_advanced/: main14.ipynb
phase3_advanced/16_langgraph_basics/: main16.ipynb
phase3_advanced/17_multi_agent/: main17.ipynb
phase4_projects/02_multi_agent_support/: main.py  main4_2.ipynb
