[project]
name = "langchain1-0-langgraph1-0-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain>=1.2.0",
    "langchain-groq>=1.1.1",
    "langsmith>=0.5.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
